src/objects/Competitive_Account_Detail__c.object
<CustomObject>
    <description>DELETE?</description>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>Opportunity__r.Annual_Recurring_Rev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized Recurring Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competition_Detailed_Notes__c</fullName>
        <formula>Opportunity__r.Competitive_Strategy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competition Detailed Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <inlineHelpText>Begin to type the competitor&apos;s name and click the magnify glass. Choose the desired competitor. This will link your entry to the competition record.</inlineHelpText>
        <label>Competition</label>
        <referenceTo>Competition__c</referenceTo>
        <relationshipLabel>Competitive Account Detail</relationshipLabel>
        <relationshipName>Competitive_Account_Detail</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sales_Rep__c</fullName>
        <formula>Opportunity__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <inlineHelpText>The opportunity  name will be populated directly from the opportunity object.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitive Account Detail</relationshipLabel>
        <relationshipName>Competitive_Account_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Products_Considered__c</fullName>
        <label>Products Considered</label>
        <picklist>
            <picklistValues>
                <fullName>Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC and BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC and CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC and BC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <picklist>
            <picklistValues>
                <fullName>Immature Product (Feature gaps)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immature Content (Forms)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Policy System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Relevant Live Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Too Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Too Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incumbent Advantage (Lost)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (lost)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_Won__c</fullName>
        <label>Reason Won</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incumbent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>What is your competitive Strategy?</label>
        <type>TextArea</type>
    </fields>
    <label>Competitive Account Detail</label>
    <nameField>
        <displayFormat>CAD - {00000}</displayFormat>
        <label>Competitive Account Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Account Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>